# Optimization-

./: .gitignore  README.md  pyproject.toml  scalability.py  test.py  validation.py
data/vertical_outliers/: test150322_100_50_01_2_0_5_-10_1Outlier.csv  test150322_100_50_01_2_0_5_-10_2Outlier.csv  test150322_100_50_01_2_0_5_-10_4Outlier.csv  test150322_100_50_01_2_0_5_-10_5Outlier.csv  test150322_200_50_01_2_0_5_-10_1Outlier.csv  test150322_200_50_01_2_0_5_-10_2Outlier.csv  test150322_200_50_01_2_0_5_-10_3Outlier.csv  test150322_200_50_01_2_0_5_-10_4Outlier.csv  test150322_200_50_01_2_0_5_-10_5Outlier.csv  test150322_intercept_values.csv
results/D/: scalability_formulation_D_palm_vertical_ru_phi_1.csv  scalability_formulation_D_palm_vertical_ru_phi_2.csv  scalability_formulation_D_palm_vertical_ru_phi_3.csv
results/D/validation/: best_models_D_phi_2_by_aic.csv  scalability_formulation_D_palm_vertical_ru_phi_2_scored.csv  validation_best_models_D_phi_2.csv  validation_metrics_by_size_D_phi_2.csv
results/L/: scalability_formulation_L_palm_vertical_ru_phi_1.csv  scalability_formulation_L_palm_vertical_ru_phi_2.csv  scalability_formulation_L_palm_vertical_ru_phi_3.csv
results/L/validation/: best_models_L_phi_2_by_aic.csv  scalability_formulation_L_palm_vertical_ru_phi_2_scored.csv  validation_best_models_L_phi_2.csv  validation_metrics_by_size_L_phi_2.csv
results/test/: test_D.csv  test_L.csv
scripts/: compare_bounds_table.py  compare_scalability_summary.py  plot_validation_table.py
src/lad_sfsod/: bounds.py  data.py  model_d.py  model_l.py  utils.py
(+6 files in other folders)
